--- a/MODUL1/MODUL1 FAHRUL.html
+++ b/MODUL1/MODUL1 FAHRUL.html
@@ -10,7 +10,7 @@
           a:hover{
               background-color: #3D2C8D;
           }
-          .jumbotrons{
+          .jumbotron{
               background-color: #FCD2D1;
           }
           .card-deck{
@@ -59,7 +59,7 @@
                 <center><h2>Tentang Kami</h2>
                   <table width="900px" height="150">
                       <tr>
-                          <td class="text-white">
+                          <td class="text">
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla aliquet, 
                               lorem nec tempus vulputate, arcu sem maximus urna, vitae pellentesque augue nibh ac leo. 
                               Integer efficitur placerat felis a maximus.
@@ -126,7 +126,7 @@
                 <br>
                 <br>
                 <br>
-                <h2 style="text-align: left;">Registrasi</h2>
+                <h2 style="text-align: center">Registrasi</h2>
                 <br>
                 <form>
                   <div class="form-group row" style="padding-left: 700px; padding-right: 650px;">
@@ -147,7 +147,7 @@
                       <textarea class="form-control"> </textarea>
                     </div>
                   </div>
-                  <div class="form-group row" style="padding-left: 700px; padding-right: 650px;>
+                  <div class="form-group row" style="padding-left: 700px; padding-right: 650px;">
                       <label for="RiwayatPenyakit class="col-sm-4 col-form-label">&nbsp;&nbsp;Pembayaran&nbsp;:</label>
                       <div class="col-sm-8">
                       <div class="form-check form-check-inline">
@@ -160,7 +160,7 @@
                       </div>
                       </div>
                     </div>
-                  <div class="form-group row" style="padding-left: 700px; padding-right: 650px;>
+                  <div class="form-group row" style="padding-left: 700px; padding-right: 650px;">
                       <label for="RiwayatPenyakit class="col-sm-4 col-form-label">&nbsp;&nbsp;Jenis Tes&nbsp;:</label>
                       <div class="col-sm-8">
                           <select class="custom-select">
@@ -172,7 +172,7 @@
                       </div>
                     </div>
                 </form>
-                <div class="form-group row" style="padding-left: 705px; padding-right: 650px;>
+                <div class="form-group row" style="padding-left: 705px; padding-right: 650px;">
                   <div class="col-sm-10>
                     <button type="submit" class="btn btn-primary">Kirim</button>
                   </div>
